# kb-tts

./: .gitignore  Dockerfile  Dockerfile.train  README.md  docker-compose.train.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_tts.py  voices_config.json
notebooks/: train_piper.ipynb
src/kb_tts/: __init__.py  __main__.py  api.py  download.py
src/kb_tts/training/: __init__.py  api.py  data_generator.py  trainer.py
src/kb_tts/training/templates/: index.html
tests/: test_markdown_cleaning.py  test_new_features.py  test_training_api.py  test_voice_resolution.py
