[project]
name = "kb-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WIll Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "piper-tts>=1.2.0",
    "requests>=2.31.0",
    "yt-dlp>=2024.3.10",
    "openai-whisper>=20231117",
    "piper-phonemize>=1.1.0",
    "pytorch-lightning>=1.6.0,<2.0.0",
    "torchmetrics>=0.11.0,<1.0.0",
    "librosa>=0.9.1",
    "python-multipart>=0.0.32",
]

[project.scripts]
kb-tts = "kb_tts:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.350",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
